--- a/index.html
+++ b/index.html
@@ -10,25 +10,32 @@
   <body>
     <main class="calculator">
       <h3 id="result"></h3>
-      <button class="btn" id="9"></button>
-      <button class="btn" id="8"></button>
-      <button class="btn" id="7"></button>
-      <button class="btn" id="6"></button>
-      <button class="btn" id="5"></button>
-      <button class="btn" id="4"></button>
-      <button class="btn" id="3"></button>
-      <button class="btn" id="2"></button>
-      <button class="btn" id="1"></button>
-      <button class="btn" id="0"></button>
-      <button class="btn" id="."></button>
-      <button class="btn" id="+"></button>
-      <button class="btn" id="-"></button>
-      <button class="btn" id="*"></button>
-      <button class="btn" id="/"></button>
-      <button id="c"></button>
-      <button id="equal"></button>
+      <button id="history" class="button"></button>
+      <button id="PI" class="button"></button>
+      <button id="money" class="button"></button>
+      <button class="appbtn button" id="9"></button>
+      <button class="appbtn button" id="8"></button>
+      <button class="appbtn button" id="7"></button>
+      <button class="appbtn button" id="6"></button>
+      <button class="appbtn button" id="5"></button>
+      <button class="appbtn button" id="4"></button>
+      <button class="appbtn button" id="3"></button>
+      <button class="appbtn button" id="2"></button>
+      <button class="appbtn button" id="1"></button>
+      <div id="doubleTouche">
+        <button id="parenthese1" class="appbtn button"></button>
+        <button id="parenthese2" class="appbtn button"></button>
+      </div>
+      <button class="appbtn button" id="0"></button>
+      <button class="appbtn button" id="."></button>
+      <button class="appbtn button" id="+"></button>
+      <button class="appbtn button" id="-"></button>
+      <button class="appbtn button" id="*"></button>
+      <button class="appbtn button" id="/"></button>
+      <button id="c" class="button"></button>
+      <button id="equal" class="button"></button>
     </main>
-
+    <aside class="history"></aside>
     <script src="script.js"></script>
   </body>
 </html>
