[add] fonctionalité : keypress + fin parentheses + enter

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h3 id="result"></h3>
       <button id="history" class="button"></button>
       <button id="PI" class="button"></button>
-      <button id="money" class="button"></button>
+      <button id="enter" class="button"></button>
       <button class="appbtn button" id="9"></button>
       <button class="appbtn button" id="8"></button>
       <button class="appbtn button" id="7"></button>
@@ -23,8 +23,8 @@
       <button class="appbtn button" id="2"></button>
       <button class="appbtn button" id="1"></button>
       <div id="doubleTouche">
-        <button id="parenthese1" class="appbtn button"></button>
-        <button id="parenthese2" class="appbtn button"></button>
+        <button id="parenthese1" class="appbtn"></button>
+        <button id="parenthese2" class="appbtn"></button>
       </div>
       <button class="appbtn button" id="0"></button>
       <button class="appbtn button" id="."></button>
@@ -33,7 +33,7 @@
       <button class="appbtn button" id="*"></button>
       <button class="appbtn button" id="/"></button>
       <button id="c" class="button"></button>
-      <button id="equal" class="button"></button>
+      <button id="equal"></button>
     </main>
     <aside class="history"></aside>
     <script src="script.js"></script>
