--- a/index.html
+++ b/index.html
@@ -9,44 +9,48 @@
   </head>
 
   <body>
-    <main class="calculator">
-      <h3 id="result"></h3>
+    <div id="div-flex">
+      <main class="calculator">
+        <h3 id="result"></h3>
 
-      <button id="history" class="button"></button>
+        <button id="history" class="button"></button>
 
-      <button id="PI" class="button"></button>
+        <button id="PI" class="button"></button>
 
-      <button id="enter" class="button"></button>
+        <button id="enter" class="button"></button>
 
-      <button class="appbtn button" id="9"></button>
-      <button class="appbtn button" id="8"></button>
-      <button class="appbtn button" id="7"></button>
-      <button class="appbtn button" id="6"></button>
-      <button class="appbtn button" id="5"></button>
-      <button class="appbtn button" id="4"></button>
-      <button class="appbtn button" id="3"></button>
-      <button class="appbtn button" id="2"></button>
-      <button class="appbtn button" id="1"></button>
+        <button class="appbtn button" id="9"></button>
+        <button class="appbtn button" id="8"></button>
+        <button class="appbtn button" id="7"></button>
+        <button class="appbtn button" id="6"></button>
+        <button class="appbtn button" id="5"></button>
+        <button class="appbtn button" id="4"></button>
+        <button class="appbtn button" id="3"></button>
+        <button class="appbtn button" id="2"></button>
+        <button class="appbtn button" id="1"></button>
 
-      <div id="doubleTouche">
-        <button id="parenthese1" class="appbtn"></button>
-        <button id="parenthese2" class="appbtn"></button>
-      </div>
+        <div id="doubleTouche">
+          <button id="parenthese1" class="appbtn"></button>
+          <button id="parenthese2" class="appbtn"></button>
+        </div>
 
-      <button class="appbtn button" id="0"></button>
-      <button class="appbtn button" id="."></button>
-      <button class="appbtn button" id="+"></button>
-      <button class="appbtn button" id="-"></button>
-      <button class="appbtn button" id="*"></button>
-      <button class="appbtn button" id="/"></button>
+        <button class="appbtn button" id="0"></button>
+        <button class="appbtn button" id="."></button>
+        <button class="appbtn button" id="+"></button>
+        <button class="appbtn button" id="-"></button>
+        <button class="appbtn button" id="*"></button>
+        <button class="appbtn button" id="/"></button>
 
-      <button id="c" class="button"></button>
+        <button id="c" class="button"></button>
 
-      <button id="equal"></button>
-    </main>
+        <button id="equal"></button>
+      </main>
 
-    <aside class="history"></aside>
-
+      <aside class="history"></aside>
+    </div>
+    <footer>
+      <h6>Web calculator coded by Victor T</h6>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
